--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -1,18 +1,20 @@
 
-\chapter{Co-operative TMH Insertion}
+\chapter{Co-operative TMHs}
 \section{Abstract}
 \section{Introduction}
 
-Translocation is when a ribosome translates the~\gls{rna} to a nascent peptide chain which is handed directly or indirectly to insertion machinery which threads the chain through and, in the case of~\gls{tmh}s, releases the~\gls{tmh} into the membrane environment.
+Translocation is when a ribosome translates the~\gls{rna} to a nascent peptide chain which is handed directly or indirectly to the translocon insertion machinery which threads the chain through and, in the case of~\gls{tmh}s, releases the~\gls{tmh} into the membrane environment.
 
 The overwhelming majority of~\gls{tmp}s use the co-translational method of translocation.
-It has long been understood that this method is essentially the ~\gls{srp} recognising and attaching to the nascent peptide chain whilst it is still associated with the ribosome, and the~\gls{srp} then targets the peptide and ribosome to a~\gls{sr} in association with some membrane insertion machinery on the~\gls{er}~\cite{Pool2005, Hessa2005}.
+It has long been understood that this method is essentially the ~\gls{srp} recognising and attaching to the nascent peptide chain whilst it is still associated with the ribosome, and the~\gls{srp} then targets the peptide and ribosome to a~\gls{sr} in association with some membrane insertion machinery on the~\gls{er} membrane~\cite{Pool2005, Hessa2005}.
 
 Crystal structures showed the \gls{srp} targets the nascent peptide chain for membrane insertion via a GTPase in both the \gls{srp} and \gls{sr}, that is initially associated with the translocon machinery, coming together to form a complex thus bringing the nascent peptide chain in proximity to the translocon~\cite{Shan2005}.
-Mutant studies of~\gls{srp}~\cite{Shan2005} revealed key discrete conformational stages.
-These are the specific recognition of signal sequences on cargo proteins, the targeting of the package to the membrane, the handing over of the cargo to the translocation machinery all the while maintaining precise spatial and temporal coordination of each molecular event~\cite{Saraogi2011}.
+Mutant studies of \gls{srp} revealed key discrete conformational stages~\cite{Shan2005}.
+These are the specific recognition of signal sequences on cargo proteins, the targeting of the package to the membrane, the handing over of the cargo to the translocation machinery all the while maintaining precise spatial and temporal coordination of each molecular event \cite{Saraogi2011}.
 
-The prevailing idea about membrane insertion by the translocon is that the \gls{tmh}s partition in the membrane one at a time as the translocon lateral gate opens, exposing the \gls{tmh} to the membrane \ref{fig:sequential-insertion}.
+%Section on translocon
+
+The prevailing idea about membrane insertion by the translocon is that the \gls{tmh}s partition in the membrane one at a time as the translocon lateral gate opens, exposing the \gls{tmh} to the membrane (Figure \ref{fig:sequential-insertion})\cite{Cymer2014}.
 
 \begin{figure}[!ht]
 \centering
@@ -22,18 +24,28 @@ The prevailing idea about membrane insertion by the translocon is that the \gls{
         This triggers the lateral gate to open.
         As the nascent TMH is exposed to the membrane, it begins to partition.
         This implies that the TMHs ultimately have no meaningful interactions with one another until they the protein has been threaded into the membrane and the1 TMH bundle is formed.
-
 }
-
 \label{fig:sequential-insertion}
 \end{figure}
 
+\subsection{Co-operative insertion}
+Generally only a handful of examples have come close to demonstrating that \gls{tmh}s co-operate in order to integrate relatively polar \gls{tmh}s.
 
-\gls{gpcr}s are a diverse family of membrane surface receptors.
-They have been associated with tumerigenesis \cite{OHayre2013}, metastasis \cite{Singh2015} and in cancers \cite{Bar-Shavit2016} and are a potential target for therapies \cite{Arakaki2018}.
+\subsubsection{GPCRs}
 
+\gls{gpcr}s are a diverse family of membrane surface receptors with 7 \gls{tmh} segments.
+They have adapted to respond to a wide range of specific signals ranging from macromolecules, to photons.
+The specific signal triggers a conformational change of the \gls{gpcr} that is translated across the membrane.
+\gls{gpcr}s have been associated with tumerigenesis \cite{OHayre2013}, metastasis \cite{Singh2015} and in cancers \cite{Bar-Shavit2016} and are a potential target for therapies \cite{Arakaki2018}.
+Their ubiquitous presence in cellular life and medical relevance makes them an important topic of study.
 
-Steves paper GPCRs (opsin) helix 4 5 6 are folded together - Ismail, N., Crawshaw, S. G., Cross, B. C. S., Haagsma, A. C., \& High, S. (2008). Specific transmembrane segments are selectively delayed at the ER translocon during opsin biogenesis. The Biochemical Journal, 411(3), 495–506. https://doi.org/10.1042/BJ20071597
+Opsins are a group of light sensitive \gls{gpcr}s.
+It was shown by cross linking studies that opsin \gls{tmh}s 5-7 are retained in the \gls{er} translocon and only parition once biosynthesis is complete \cite{Ismail2008}.
+The timing of this partitioning is controlled by the hydrophobicity of the \gls{tmh}, not protein length or the relative position of the \gls{tmh} within the protein.
+Although artificially extending the C-terminal did not result release of the \gls{tmh}s, by replacing native \gls{tmh} 7 with a more hydrophobic \gls{tmh}, the speed of insertion was decreased.
+\gls{tmh}s 1-4 are inserted independently, and the 5-7 \gls{tmh}s partition into the membrane at the same time.
+
+\subsection{Voltage gated ion channels}
 
 Good\--bad graphic from von heijne group association can happen in tunnel, in translocon, or after insertion Cymer, F., von  Heijne, G., \& White, S. H. (2015). Mechanisms of Integral Membrane Protein Insertion and Folding. Journal of Molecular Biology, 427(5), 999–1022. https://doi.org/10.1016/J.JMB.2014.09.014
 
@@ -51,17 +63,19 @@ During translation of a \gls{tmp} protein, the \gls{srp} binds to the ribosome a
 This complex then binds to the \gls{sr} in association with the membrane bound translocon.
 The nascent peptide is then fed into the translocon as it is being translated; hence ``co-translational insertion''.
 
-The journey of the \gls{tmh} through this machinery has been studied using both crosslinking experiments and a relatively new technique of \gls{ap}s.
+The journey of the \gls{tmh} through this machinery has been studied using both crosslinking experiments and a relatively new technique of \gls{ap}s \cite{Cymer2014}.
+Accessibility assays and an improved intramolecular crosslinking assay showed that the helical transmembrane S3b–S4 hairpin (the “paddle”) of a voltage-gated potassium (Kv) forms in the ribosome tunnel \cite{Tu2014}.
+Ribosomal folding of the \gls{tmh}s in Kv1.3, a potassium channel, is maintained in the translocon \cite{Tu2010}.
+Therefore, the tertiary folding of the voltage sensor domain occurs via preformed secondary-structure formation.
 
+Furthermore, it has recently been suggested that larger structures fold as the ribosomal exit tunnel widens \cite{Kudva2018}.
+This size dependent folding was observed by using the SecM translational \gls{ap}.
+Two ribosome mutants were compared (uL23 that is close to the exit tunnel and uL24 deletions which is a hairpin loop that obstructs the tunnel exit.) zinc finger folds deeper in uL23 mutant than wildtype (but not uL24) and a 100 residue domain folds deeper than the uL24 mutant (but not the uL23) \cite{Kudva2018}.
 
+The ribosomal tunnel also speeds up elongation of neutral and negatively-charged peptides.
+This is attributed to the sporadic negative patches within the ribosomal exit tunnel \cite{Lu2008}.
 
-Accessibility assay and an improved intramolecular crosslinking assay showed that the helical transmembrane S3b–S4 hairpin (“paddle”) of a voltage-gated potassium (Kv)forms in the ribosome tunnel - Tu,L., Khanna,P. and Deutsch,C. (2014) Transmembrane Segments Form Tertiary Hairpins in the Folding Vestibule of the Ribosome. J. Mol. Biol., 426, 185–198.
-
- Size dependent folding happens through the exit tunnel. Ribosome mutants (Leucine 23 and 24 deletions) Zinc finger folds deeper in L23 mutant than wildtype (but not L24) and a 100 residue domain folds deeper than the L24 mutant (but not the L23). Kudva,R., Pardo-Avila,F., Sandhu,H., Carroni,M., Bernstein,H.D. and Heijne,G. Von (2018) The Shape of the Ribosome Exit Tunnel Affects Cotranslational Protein Folding. bioRxiv, 10.1101/274191.
-
-Ribosomal folding of the TMHs (in Kv1.3) is kept in the translocon therefor tertiary folding of the voltage sensor domain occurs via preformed secondary-structure formation. Tu,L.W. and Deutsch,C. (2010) A Folding Zone in the Ribosomal Exit Tunnel for Kv1.3 Helix Formation. J. Mol. Biol., 396, 1346–1360.
-
-Ribosomal tunnel speeds up elongation of neutral and negatively-charged peptides because it has sporadic negative patches. Lu,J. and Deutsch,C. (2008) Electrostatics in the Ribosomal Tunnel Modulate Chain Elongation Rates. J. Mol. Biol., 384, 73–86.
+The ribosome clearly has the potential to prefold motifs and small domains before translocon insertion.
 
 \section{Methods}
 \subsection{Datasets}
