more cooperative discussion added

--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -29,12 +29,16 @@ The prevailing idea about membrane insertion by the translocon is that the \gls{
 \end{figure}
 
 \subsection{Co-operative insertion}
-Generally only a handful of examples have come close to demonstrating that \gls{tmh}s co-operate in order to integrate relatively polar \gls{tmh}s.
+Multiple \gls{tmh}s in a nascent protein can be associated with the eukaryotic translocon simultaneously.
+It was shown that \gls{tmh}s can stay inassociation with the translocon in order to mediate integration of downstream \gls{tmh}s \cite{Sadish2005, Cross2009}.
+Not only this, but it was shown that there is a direct interaction between the \gls{tmh}s; more recently \gls{ap}s were used to show pulling forces between a \gls{tmh} and more C-terminally located \gls{tmh} during the C-terminal \gls{tmh} membrane partitioning from the translocon \textit{in vivo} \cite{Cymer2013}.
+This could be facilitated during the probing of a \gls{tmh} from the translocon as the lateral gate ``cracks'' open in an intermediate stage before the \gls{tmh} satisfies the full hydrophobic requirements to open the gate fully, an intermediate stage observed in a SecY crystal structure \cite{Egea2010}.
 
 \subsubsection{GPCRs}
 
 \gls{gpcr}s are a diverse family of membrane surface receptors with 7 \gls{tmh} segments.
-They have adapted to respond to a wide range of specific signals ranging from macromolecules, to photons.
+GPCRs have long be known to be overrepresented among genomes \cite{Remm2000}.
+They have adapted to respond to a wide range of specific signals ranging from macromolecules to photons.
 The specific signal triggers a conformational change of the \gls{gpcr} that is translated across the membrane.
 \gls{gpcr}s have been associated with tumerigenesis \cite{OHayre2013}, metastasis \cite{Singh2015} and in cancers \cite{Bar-Shavit2016} and are a potential target for therapies \cite{Arakaki2018}.
 Their ubiquitous presence in cellular life and medical relevance makes them an important topic of study.
@@ -47,13 +51,15 @@ Although artificially extending the C-terminal did not result release of the \gl
 
 \subsection{Voltage gated ion channels}
 
-Good\--bad graphic from von heijne group association can happen in tunnel, in translocon, or after insertion Cymer, F., von  Heijne, G., \& White, S. H. (2015). Mechanisms of Integral Membrane Protein Insertion and Folding. Journal of Molecular Biology, 427(5), 999–1022. https://doi.org/10.1016/J.JMB.2014.09.014
+Another example of cooperative \gls{tmh} insertion is that of the 3rd and 4th \gls{tmh} of the potassium channel (shaker family) which was shown to insert either sequentially or cotranslationally \cite{Zhang2007, Cymer2015}.
+This is especially notable in the case of KAT1, that is a plant K$_v$ channel that is thought to mediate long-term potassium influx into guard cells causing the stomata to open.
+In the case of KAT1, N-glycosylation of various mutant fusion KAT1 constructs revealed that there is no choice of sequential insertion since \gls{tmh} 3 and 4 have no insertion potential and no topogenic functions themselves \cite{Sato2002, Sato2003}.
+In \gls{tmh} 4 this is due to the charged residues making it relatively polar.
+However, previous experimentation in Kv1.3 had found that while \gls{tmh} 4 did not initiate insertion, it did have insertion potential, and that when constgructs contained multiple \gls{tmh}s, membrane insertion efficiency increased \cite{Tu2000}.
+Without the ability to stop the translation through the translocon and form a \gls{tmh}, it was suggested that a different means was needed than classic sequential insertion, and even that \gls{tmh} 3 and 4 are integrated by the translocon at the same time post-translationally, i.e the \gls{tmh}s are folded prior to insertion \cite{Sato2003}.
+They achieve this in part becase the previous \gls{tmh}s 1 and 2 form a firm ``base'' within the membrane environment.
 
-Potassium channel (shaker family) S3–S4 insertion may, in part, occur in a sequential or “cotranslational” manner potassium channel - Zhang,L., Sato,Y., Hessa,T., von Heijne,G., Lee,J.-K., Kodama,I., Sakaguchi,M. and Uozumi,N. (2007) Contribution of hydrophobic and electrostatic interactions to the membrane integration of the Shaker K+ channel voltage sensor domain. Proc. Natl. Acad. Sci. U. S. A., 104, 8263–8.
 
-SecY “cracks” open according to crystal structure analysis. Allows potential TMH to probe the environment. Egea,P.F. and Stroud,R.M. Lateral opening of a translocon upon entry of protein suggests the mechanism of insertion into membranes. 10.1073/pnas.1012556107.
-
-Translational Arrest Peptides as in Vivo Force Sensors found interactions between C-terminal TMH and upstream TMH as the C-terminal TMH is partitioning from the translocon. 1. Cymer,F. and von Heijne,G. (2013) Cotranslational folding of membrane proteins probed by arrest-peptide-mediated force measurements. Proc. Natl. Acad. Sci. U. S. A., 110, 14640–5.
 
 \subsection{Ribsomes in the biogenesis of membrane proteins.}
 Ribosomes translate mRNA sequences to amino acid chains and are present in all living cells, and indeed the ribosomal complexes presence and activity is for many used to define whether something is alive.
@@ -63,10 +69,21 @@ During translation of a \gls{tmp} protein, the \gls{srp} binds to the ribosome a
 This complex then binds to the \gls{sr} in association with the membrane bound translocon.
 The nascent peptide is then fed into the translocon as it is being translated; hence ``co-translational insertion''.
 
-The journey of the \gls{tmh} through this machinery has been studied using both crosslinking experiments and a relatively new technique of \gls{ap}s \cite{Cymer2014}.
+\gls{ap}s are typically 10-15 residues long that bind to the upper end of the ribosomal exit tunnel.
+Once a specific mRNA codon is recognised, ribosomal stalling is induced \cite{Ito2010} and translation is halted unless a strong enough pulling force from the downstream insertion is acting on the nascent chain at that time \cite{Butkus2013}.
+Several ``strengths'' of \gls{ap} have been identified.
+For example, SecM from \textit{E. coli} is 17 residues long and relatively weak, whereas a mutated SecM from \textit{Mannheimia succiniciproducens}(Ms-Sup1) is much stronger and 8 residues long ending in a proline which will halt translation \cite{Ismail2012}.
+There are several other SecM proteins of other strengths from various bacterial species \cite{Yap2009}.
+Therefore \gls{ap}s are a technique that can be used to measure precise forces acting on a specific part of the nascent chain during co-transltaional membrane protein integration allowing the study of \gls{tmp} kinetics during insertion and folding.
+Indeed the force profile of a single residue can now be obtained \textit{in vivo} \cite{Ismail2012}.
+In an idealised \gls{tmh} segment composed of alanine and leucine being inserted into \textit{E. coli} membrane through SecM \gls{ap} with SDS-PAGE, hydrophobicity is more able to overcome the arrest peptide when it is near the N-terminal (of an N-terminal-inside \gls{tmh}) \cite{Ismail2012}.
+This could be either the \gls{tmh} finally coming into contact with the cytoplasmic face of the lipid bilayer, or an interaction between the N-terminal and the tip of the lateral gate as previosuly shown in Sec61; part of a pre-integration \gls{tmh} interrogation \cite{MacKinnon2014}.
+
+The journey of the \gls{tmh} through this machinery has been studied using both crosslinking experiments and the relatively new technique of \gls{ap}s \cite{Cymer2014}.
+
 Accessibility assays and an improved intramolecular crosslinking assay showed that the helical transmembrane S3b–S4 hairpin (the “paddle”) of a voltage-gated potassium (Kv) forms in the ribosome tunnel \cite{Tu2014}.
 Ribosomal folding of the \gls{tmh}s in Kv1.3, a potassium channel, is maintained in the translocon \cite{Tu2010}.
-Therefore, the tertiary folding of the voltage sensor domain occurs via preformed secondary-structure formation.
+Therefore, some of the final structural folded elements of the voltage sensor domain occurs within the ribosomal exit tunnel.
 
 Furthermore, it has recently been suggested that larger structures fold as the ribosomal exit tunnel widens \cite{Kudva2018}.
 This size dependent folding was observed by using the SecM translational \gls{ap}.
@@ -107,7 +124,7 @@ Mechano-sensitive (controlled vocabulary if no list available) distributions
 Voltage gated (controlled vocabulary if no list available) distributions
 
 \section{Discussion}
-GPCRs have long be known to be overrepresented among genomes \cite{Remm2000}.
+
 
 Seen across a variety of 7TM families with varying functions with datasets built from all membrane types (hence variety).
 Suggests a pressure for simpler TMHs to precede more complex ones, repeating every 3-4 TMHs.
